<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopping Recommendation App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">Not Registered? Sign up Here</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="drawer_open">Open Navigation</string>
    <string name="drawer_close">Close Navigation</string>
    <string name="action_websearch">Web Search</string>
    <string name="app_not_available">Sorry</string>
    <string name="send">Send Reset Code</string>
    <string name="email">Please enter your email address</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_repeat">Confirm Password</string>
    <string name="news_feed">News Feed</string>

    <string-array name="navigation_array">
        <item>News Feed</item>
        <item>Search</item>
        <item>Profile</item>
        <item>Shopping List</item>
        <item>Messages</item>
        <item>Requests</item>
        <item>Friend Search</item>
        <item>Logout</item>
    </string-array>

    <string name="title_activity_forgot_password">Shopping Recommendation App</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_listview">Listview</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_shopping_list">Shopping List</string>
    <string name="title_activity_messages">Messages</string>
    <string name="title_activity_requests">Requests</string>
    <string name="title_activity_friend_search">Friend Search</string>
    <string name="title_activity_news_feed">News Feed</string>
    <string name="title_activity_drawer">DrawerActivity</string>

</resources>
